SETR file update

--- a/notebooks/SETR_panoptic.ipynb
+++ b/notebooks/SETR_panoptic.ipynb
@@ -184,7 +184,7 @@
     "print(\"Unique classes in the mask:\", unique_classes)\n",
     "\n",
     "# Ensure the directory exists\n",
-    "save_dir = '../notebooks/SETR_result/'\n",
+    "save_dir = '../notebooks/SETR_result/image1'\n",
     "os.makedirs(save_dir, exist_ok=True)\n",
     "\n",
     "# Define Cityscapes class labels using model.dataset_meta['classes']\n",
